try to fix horizontal scroll

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -55,8 +55,8 @@ body {
 
   border-radius: 0.5rem;
 
-  @media (min-width: 480px) {
-    font-size: 1.3rem;
+  @media (min-width: 570px) {
+    font-size: 1rem;
   }
 }
 
